Fixing line breaks on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1705,10 +1705,6 @@
 			height: auto;
 			min-height: 0;
 			
-			br {
-				display: none;
-			}
-
 			.more {
 				display: none;
 			}
